--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
             ...
         </div>
     </div>
-
+    
+    <script type='text/javascript' src='https://unpkg.com/fetch-jsonp@1.1.1'></script>
     <script src="GetSheetDone.js"></script>
     <script>
         const $key = document.getElementById('key'),
